[package]
name = "storethehash"
version = "0.1.0"
authors = ["Volker Mische <volker.mische@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"

[dependencies]
thiserror = "1.0.22"
log = "0.4.11"

[dev-dependencies]
tempfile = "3.1.0"
cid = { version = "0.6.0", default-features = false, features = ["std"] }
fil_logger = "0.1.2"
serde_json = "1.0.59"
storethehash-primary-cid = { path = "primary/cid" }

[workspace]
members = [
  "db/cid-ffi",
  "primary/cid",
  "primary/inmemory",
]
