[package]
name = "storethehash-db-cid-ffi"
version = "0.1.0"
authors = ["Volker Mische <volker.mische@gmail.com>"]
edition = "2018"

[lib]
name = "storethehash_db_cid"
crate-type = ["cdylib", "staticlib"]

[dependencies]
storethehash = { version = "0.1.0", path = "../../" }
storethehash-primary-cid = { version = "0.1.0", path = "../../primary/cid" }
libc = "0.2.81"
