[package]
name = "storethehash-primary-cid"
version = "0.1.0"
authors = ["Volker Mische <volker.mische@gmail.com>"]
edition = "2018"

[dependencies]
storethehash = { version = "0.1.0", path = "../../" }
cid = { version = "0.6.0", default-features = false, features = ["std"] }
wasabi_leb128 = "0.4.0"
log = "0.4.11"
